# la-patate-chaude

./: .gitignore  Cargo.toml  Documention_Groupe.md  README.md
 test/: test_recovery.rs
.github/workflows/: rust.yml
client/: Cargo.toml
client/src/: main.rs  recovery_select.rs
lib_common/: Cargo.toml
lib_common/src/: challenge.rs  lib.rs  md5.rs  message.rs  recovery_secret.rs  send_message.rs
lib_common/tests/: test_recovery.rs
server/: Cargo.toml
server/src/: main.rs
src/: create_message.rs  main.rs  recovery_select.rs  struct.rs  struct_game.rs
