[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lib_common = {path ="../lib_common"}
serde = { version= "1", features=["derive"] }
serde_json = "1"
rand = "0.8.5"
md5 = "0.7.0"
byteorder = "1"
lipsum = "0.8"